--- a/index.ipynb
+++ b/index.ipynb
@@ -56,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "traveller=\"John Smith\"\n",
+    "traveller=\"john Smith\"\n",
     "def meet_traveller(): \n",
     "    welcome_message = \"Hi \" + traveller.title() + \", I'm so glad we'll be going on the trip together!\"\n",
     "    return welcome_message # return statement"
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -86,7 +86,7 @@
        "\"Hi John Smith, I'm so glad we'll be going on the trip together!\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
